--- a/index.html
+++ b/index.html
@@ -425,5 +425,18 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button
+          class="modal-button"
+          type="button"
+          aria-label="Open modal button"
+        >
+          <svg class="modal-icon" width="" height="">
+            <use href=""></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
