--- a/portfolio.html
+++ b/portfolio.html
@@ -23,18 +23,22 @@
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="navigation">
-          <a class="logo link" href="./index.html"
+          <a class="logo before-link link" href="./index.html"
             >Web<span class="accent-logo">Studio</span></a
           >
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Studio</a>
+              <a class="menu-link before-link link" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link before-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href="">Contacts</a>
+              <a class="menu-link before-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -261,5 +265,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
