modal button + overlay+::after

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,22 +23,20 @@
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="navigation">
-          <a class="logo before-link link" href="./index.html"
+          <a class="logo link" href="./index.html"
             >Web<span class="accent-logo">Studio</span></a
           >
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link before-link link" href="./index.html"
-                >Studio</a
-              >
+              <a class="menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link before-link link" href="./portfolio.html"
+              <a class="menu-link current link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="menu-item">
-              <a class="menu-link before-link link" href="">Contacts</a>
+              <a class="menu-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -85,12 +83,19 @@
           <ul class="list gallary-list">
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href="">
-                <img
-                  class="list-img"
-                  src="./images/portfolio_img/banking_app_interface_concept.jpg"
-                  alt="banking_app_interface_concept"
-                  width="360"
-                />
+                <div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/banking_app_interface_concept.jpg"
+                    alt="banking_app_interface_concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">
                     Banking App Interface Concept
@@ -101,12 +106,20 @@
             </li>
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href="">
-                <img
-                  class="list-img"
-                  src="./images/portfolio_img/cashless_payment.jpg"
-                  alt="cashless_payment"
-                  width="360"
-                />
+                <div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/cashless_payment.jpg"
+                    alt="cashless_payment"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">Cashless Payment</h2>
                   <p class="description-text">Marketing</p>
@@ -115,12 +128,20 @@
             </li>
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href="">
-                <img
-                  class="list-img"
-                  src="./images/portfolio_img/meditation_app.jpg"
-                  alt="meditation_app"
-                  width="360"
-                />
+                <div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/meditation_app.jpg"
+                    alt="meditation_app"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">Meditation App</h2>
                   <p class="description-text">App</p>
@@ -130,12 +151,20 @@
 
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href="">
-                <img
-                  class="list-img"
-                  src="./images/portfolio_img/taxi_service.jpg"
-                  alt="taxi_service"
-                  width="360"
-                />
+                <div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/taxi_service.jpg"
+                    alt="taxi_service"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">Taxi Service</h2>
                   <p class="description-text">Marketing</p>
@@ -144,12 +173,20 @@
             </li>
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href=""
-                ><img
-                  class="list-img"
-                  src="./images/portfolio_img/screen_illustrations.jpg"
-                  alt="screen_illustrations"
-                  width="360"
-                />
+                ><div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/screen_illustrations.jpg"
+                    alt="screen_illustrations"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">Screen Illustrations</h2>
                   <p class="description-text">Design</p>
@@ -158,12 +195,20 @@
             </li>
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href=""
-                ><img
-                  class="list-img"
-                  src="./images/portfolio_img/online_courses.jpg"
-                  alt="online_courses"
-                  width="360"
-                />
+                ><div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/online_courses.jpg"
+                    alt="online_courses"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">Online Courses</h2>
                   <p class="description-text">Marketing</p>
@@ -172,12 +217,20 @@
             </li>
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href="">
-                <img
-                  class="list-img"
-                  src="./images/portfolio_img/instagram_stories_concept.jpg"
-                  alt="instagram_stories_concept"
-                  width="360"
-                />
+                <div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/instagram_stories_concept.jpg"
+                    alt="instagram_stories_concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">
                     Instagram Stories Concept
@@ -188,12 +241,20 @@
             </li>
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href="">
-                <img
-                  class="list-img"
-                  src="./images/portfolio_img/organic_food.jpg"
-                  alt="organic_food"
-                  width="360"
-                />
+                <div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/organic_food.jpg"
+                    alt="organic_food"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">Organic Food</h2>
                   <p class="description-text">Web Site</p>
@@ -202,12 +263,20 @@
             </li>
             <li class="gallery-project-item">
               <a class="gallery-project-link link" href="">
-                <img
-                  class="list-img"
-                  src="./images/portfolio_img/fresh_coffee.jpg"
-                  alt="fresh_coffee"
-                  width="360"
-                />
+                <div class="gallary-project-wrapper">
+                  <img
+                    class="list-img"
+                    src="./images/portfolio_img/fresh_coffee.jpg"
+                    alt="fresh_coffee"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="gallary-card-content-wrraper">
                   <h2 class="progecrt-name list-title">Fresh Coffee</h2>
                   <p class="description-text">Web Site</p>
@@ -265,6 +334,5 @@
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
   </body>
 </html>
