--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
         <address class="address">
           <ul class="menu-contacts list">
             <li class="menu-item-contact">
-              <a
-                class="menu-link-contact link mail-contact"
-                href="mailto:info@devstudio.com"
+              <a class="menu-link-contact link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
